markdown code blocks not preserving line breaks, removed a bootstrap over-ride which fixes this, but also changed the style to pre-wrap to wrap the text rather than the default horizontal scroll

--- a/view/css/bootstrap-red.css
+++ b/view/css/bootstrap-red.css
@@ -71,10 +71,6 @@ nav .dropdown-menu {
 	min-width: auto;
 }
 
-code {
-	white-space: normal;
-}
-
 label {
 	font-weight: bold;
 }
